[metadata]
name = moht
version = 0.4.1
author = Michal Plichta
maintainer = Michal Plichta
description = Simple yet powerful tool to help you manage your mods in several ways.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Role-Playing
    Topic :: Utilities
keywords = morrowind, openmw, mod, tes3cmd, modding, tes3
url = https://gitlab.com/modding-openmw/modhelpertool
project_urls =
    Bug Reports = https://gitlab.com/modding-openmw/modhelpertool/issues
    Source = https://gitlab.com/modding-openmw/modhelpertool

[options]
include_package_data = True
packages = find:
zip_save = False
python_requires = >=3.7
install_requires =
    packaging
;    Pillow
;    psutil
;    PyYAML
;    requests
;    typing-extensions; python_version < '3.8'

[options.entry_points]
console_scripts =
        moht_tk = moht.start:run_tk
        moht_qt = moht.start:run_qt

[options.extras_require]
test =
    pytest
    pytest-mccabe
    pytest-random
    tox
qt5 =
    PyQt5 == 5.15.7
    QtAwesome == 1.1.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
moht =
    py.typed
    img/moht.png
    img/moht.ico
    resources/tes3cmd-0.37v.exe
    resources/tes3cmd-0.37w
    resources/tes3cmd-0.40-pre_rel2.exe
    resources/tes3cmd-0.40-pre_rel2
    ui/about.ui
    ui/qtgui.ui

[tool:pytest]
mccabe-complexity =
    qtgui.py 6
    *.py 5
testpaths = ["tests"]

[mypy]
ignore_missing_imports = True
html_report = mypyhtml

[pycodestyle]
count = True
ignore = E501
max-line-length = 250
statistics = True

[pydocstyle]
inherit = false
ignore = D100,D101,D104,D105,D203,D212,D401
match = .*\.py

[flake8]
max-line-length = 250
max-complexity = 5
show-source = True
statistics = True
count = True

[tox:tox]
envlist = py37,py38,py39,cov310,mypy,flake8,pycodestyle,pydocstyle

[testenv]
commands = pytest --mccabe --random -q --disable-warnings
deps =
    pytest
    pytest-mccabe
    pytest-random

[testenv:cov310]
commands = pytest -q --disable-warnings --cov-report html --cov-report term-missing --cov-report xml --cov=moht tests
deps =
    pytest
    pytest-cov

[testenv:mypy]
basepython = python3.10
commands = mypy moht
deps =
    mypy
    lxml
;    types-requests
;    types-PyYAML

[testenv:flake8]
basepython = python3.10
commands =
     flake8 . --select=E9,F63,F7,F82 --show-source
     flake8 . --exit-zero --ignore=E501
deps =
    flake8

[testenv:pycodestyle]
basepython = python3.10
commands =
     pycodestyle --statistics --count moht
deps =
    pycodestyle

[testenv:pydocstyle]
basepython = python3.10
commands =
     pydocstyle --count moht
deps =
    pydocstyle
